--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="carousel-container">
             <h2>tersedia Elaina versi web</h2>
             <p class="who-we-are"><—geser untuk melihat selanjutnya—></p>
-            <a href="ai.html" class="btn-get-started">coba sekarang</a>
+            <a href="Ai.html" class="btn-get-started">coba sekarang</a>
           </div>
         </div><!-- End Carousel Item -->
 
